modifier le titre principale

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="profile-picture">
             <img src="C:\Users\oussa\OneDrive\Bureau\CV Proj NFC\templates blogger\1708543436962.jpg" alt="Photo de profil">
         </div>
-        <h1>LAASRI Oussama test push </h1>
+        <h1>LAASRI Oussama  </h1>
         <p class="title">Analyste d'Affaires en technologies de l’informations</p>
         <p class="summary">O.L
 </p>
