--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-picture">
-            <img src="C:\Users\oussa\OneDrive\Bureau\CV Proj NFC\templates blogger\1708543436962.jpg" alt="Photo de profil">
+            <img src="1708543436962.jpg" alt="Photo de profil">
         </div>
         <h1>LAASRI Oussama  </h1>
         <p class="title">Analyste d'Affaires en technologies de l’informations</p>
