Cette version inclut aussi des classes CSS pour définir une taille uniforme pour tous les boutons et pour intégrer des icônes via une fonte d'icônes comme FontAwesome ou une autre bibliothèque similaire.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
         <p class="title">Analyste d'Affaires en technologies de l’informations</p>
         <p class="summary">O.L
 </p>
-        <div class="action-buttons">
-		<center>
-            <a href="https://www.linkedin.com/in/yourprofile" class="btn linkedin">LinkedIn</a> <br>
-            <a href="https://www.instagram.com/yourprofile" class="btn instagram">Instagram</a> <br>
-            <a href="mailto:your.email@example.com" class="btn email">Écrire un email</a>       <br>
-            <a href="yourcontact.vcf" class="btn save-contact">Sauvegarder le contact</a>       <br>
-		</center>
-        </div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<div class="action-buttons">
+    <center>
+        <a href="https://www.linkedin.com/in/yourprofile" class="btn linkedin"><i class="fab fa-linkedin icon"></i>LinkedIn</a><br>
+        <a href="https://www.instagram.com/yourprofile" class="btn instagram"><i class="fab fa-instagram icon"></i>Instagram</a><br>
+        <a href="mailto:your.email@example.com" class="btn email"><i class="fas fa-envelope icon"></i>Écrire un email</a><br>
+        <a href="yourcontact.vcf" class="btn save-contact"><i class="fas fa-save icon"></i>Sauvegarder le contact</a><br>
+    </center>
+</div>
     </div>
 </body>
 </html>
