Ajouter l'auto-direction sur le bouton d'appel vers l'action appeler sur telephone

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <a href="https://www.instagram.com/yourprofile" class="btn instagram"><i class="fab fa-instagram icon"></i>Instagram</a><br>
         <a href="mailto:your.email@example.com" class="btn email"><i class="fas fa-envelope icon"></i>Écrire un email</a><br>
         <a href="yourcontact.vcf" class="btn save-contact"><i class="fas fa-save icon"></i>Sauvegarder le contact</a><br>
+        <a href="tel:+14385091586" class="btn call"><i class="fas fa-phone icon"></i>Appeler</a><br>
     </center>
 </div>
+
     </div>
 </body>
 </html>
